src/test/test-models/good/validate_conditional_op_good.stan
parameters {
  real y;
}
model {
  int x;
  x = 0;
  x = x && x;
  x = x == x || x;
  //  x = x ? x : x;
  y ~ normal(0,1);
}
